2005-12-10  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el (functionp): use global-hi-lock-mode

	* config/ido-config.el (yh/ido-setup): reflect changes to ido-mode

2005-11-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el (open-line): fixed behavior for negative arg

	* perso/mycode.el: use python-mode

	* latex-style/sigmalog.el (LaTeX-sigmalog-install-syntactic-keywords): changed name for variable holding custom verbatim environments

	* dotemacs.el: load version-specific .emacs files
	(savehist): replaces save-history
	disable desktop mode
	use icicles instead of ido
	(minimal): load muse before planner

	* config/lisp-config.el: group common hooks for lisp modes

	* config/compile-config.el (compile-command): make it buffer-local

	* perso/remem.el: initial checkin

	* perso/python-mode.el: initial checkin

	* perso/py-complete.el: initial checkin

	* perso/icicles.el: initial checkin

	* config/icicles-config.el: initial checkin

	* config/circe-config.el: initial checkin

2005-08-23  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el (request): don't break when slime's not there

	* config/buffer-config.el (dired-load-hook): don't bind keys

2005-08-22  Yann Hodique  <Yann.Hodique@lifl.fr>

	* config/ido-config.el: initial checkin

	* perso/perso-misc.el (fc-eval-and-replace): add argument to prevent return value insertion (side-effect only)

	* perso/patches.el (mapcond): new implementation relying on for loop
	(scroll-margin): re-enables hack

	* perso/icomplete+.el: don't interfere with minibuffer-completion-table (ido.el relies on it)

	* latex-style/sigmalog.el: initial checkin

	* latex-style/french.el: initial checkin

	* dotemacs.el (scroll-margin): restore hack

	* config/planner-config.el (planner-mode-map): keybindings for planner-task-cancelled

	* config/muse-config.el: move some variables from customize

	* config/latex-config.el (turn-on-reftex-if-available): protect reftex invocation